crates/credential/tests/probes/scheme_guard_retention.stderr
error: lifetime may not live long enough
  --> tests/probes/scheme_guard_retention.rs:42:9
   |
25 |     fn try_retain<'a>(
   |                   -- lifetime `'a` defined here
...
42 |         self.stored = Some(new_scheme);
   |         ^^^^^^^^^^^ assignment requires that `'a` must outlive `'static`
